# CoreWarsHaskell

./: RedCode.cabal  simple.cabal
app/: Main.lhs
src/: CoreWars.lhs  Lib.lhs  RedCode.lhs  Sim.lhs
